# semitone

./: .gitignore  CONTRIBUTING.md  FUTURE.md  README.md  check-style.sh  pyproject.toml
.githooks/: pre-commit
.github/workflows/: publish.yml  style.yml  tag-release.yml  test.yml
demos/: create_readme_fig.py  create_readme_figures.py  debug.py  demo.ipynb
semitone/: __init__.py  arbitrary.py  chromatic.py  diatonic_mode.py  equal_tempered.py  extender.py  just_tempered.py  major.py  minor.py  scale.py  spiral_plot.py  spiral_scale.py  tone.py
semitone/scales/: __init__.py  arbitrary.py  chromatic.py  diatonic_mode.py  equal_tempered.py  harmonic_octave.py  harmonic_series.py  just_tempered.py  major.py  minor.py  scale.py  tone.py
semitone/visuals/: __init__.py  _spiral_plot_style.py  spiral_plot.py  spiral_scale.py
tests/: graph_object_spiral_plot.py  test_draw.py  test_frequencies.py  test_import.py  test_scale.py  test_tone.py  test_write_image.py
