[tool.poetry]
name = "semitone"
version = "0.1.0"
description = "Geometric representations of tones and chords"
authors = ["Brett Deaton <brett.deaton@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
plotly = "^5.19.0"
jupyter = {version = "^1.0.0", optional = true}
kaleido = {version = "0.2.1", optional = true}

[tool.poetry.extras]
notebooks = ["jupyter", "kaleido"]

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.4"
mypy = "^1.8.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
