[project]
name = "semitone"
version = "0.4.0"
description = "Geometric representations of tones and chords"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Brett Deaton", email = "brett.deaton@gmail.com" }
]
keywords = ["music theory", "chord", "scale", "frequency", "visualization"]
dependencies = [
  "pandas>=2.2.1",
  "plotly>=5.19.0",
  "kaleido>=0.2.1",
]

[project.optional-dependencies]
notebooks = [
  "jupyter>=1.0.0"
]

[project.urls]
Repository = "https://github.com/mbdeaton/semitone"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.4"
mypy = "^1.8.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"